--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "test",
   "main": "app.js",
   "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
     "nodemon": "^2.0.8"
   },
   "devDependencies": {},
